--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  carousel_slider: ^4.2.1
+  marquee: ^2.2.3
+  provider: ^6.1.2
+  google_maps_flutter: ^2.6.0
+  http: ^1.2.1
+  geolocator: ^11.0.0
+  geocoding: ^3.0.0
+  font_awesome_flutter: ^10.7.0
+  cached_network_image: ^3.3.1
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.0.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
