--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cached_network_image: ^3.3.1
   shared_preferences: ^2.2.3
   flutter_secure_storage: ^9.0.0
+  debounce_throttle: ^2.0.0
+  permission_handler: ^11.3.1
   
 
 dev_dependencies:
