--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   debounce_throttle: ^2.0.0
   permission_handler: ^11.3.1
+  url_launcher: ^6.0.20
   
 
 dev_dependencies:
